projects/bot_eval_run/run_1768561810934/iterations/05/cmd_python_-m_compileall_-q_mini_ai_tests.stdout.txt
*** Error compiling 'mini_ai\\markov.py'...
  File "mini_ai\markov.py", line 29
    next_char_options = self.transitions.get(context, {}
                                            ^
SyntaxError: '(' was never closed

